--- a/seccion3.html
+++ b/seccion3.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <!--favicon logo-->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="images/favicon4estrellas.png" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!--site:Google Fonts, tipografia: Montserrat-->
@@ -22,6 +22,9 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="style.css" />
+
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+
   <title>Mangas</title>
 </head>
 
@@ -533,26 +536,33 @@
   </main>
 
 
-  <footer class="footer">
-    <h4>Dragon Ball Fan blog 2023</h4>
-    <p>
-      Este sitio ha sido creado para la entrega final del trabajo de Codo a Codo.
-    </p>
+    <!--footer-->
+
+    <footer class="footer">
+      <h4>Dragon Ball Fan blog 2023</h4>
+      <p id="textosindex">
+        Este sitio ha sido creado para la entrega final del trabajo de Codo a Codo.
+      </p>
 
     <!--iconos del sitio: iconify -->
     <div class="icons">
       <!--facebook logo-->
-      <iconify-icon icon="logos:facebook"></iconify-icon>
-      <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      <a href="https://www.facebook.com" target="_blank">
+        <iconify-icon icon="logos:facebook"></iconify-icon>
+      </a>
       <!--twitter logo-->
-      <iconify-icon icon="skill-icons:twitter"></iconify-icon>
-      <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      <a href="https://twitter.com" target="_blank">
+        <iconify-icon icon="skill-icons:twitter"></iconify-icon>
+      </a>
       <!--Instagram logo-->
-      <iconify-icon icon="skill-icons:instagram"></iconify-icon>
-      <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      <a href="https://www.instagram.com" target="_blank">
+        <iconify-icon icon="skill-icons:instagram"></iconify-icon>
+      </a>
       <!--Linkedin logo-->
-      <iconify-icon icon="skill-icons:linkedin"></iconify-icon>
-      <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      <a href="https://www.linkedin.com" target="_blank">
+        <iconify-icon icon="skill-icons:linkedin"></iconify-icon>
+      </a>
+
     </div>
   </footer>
 
