--- a/seccion4.html
+++ b/seccion4.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <!--favicon logo-->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="images/favicon4estrellas.png" type="image/x-icon" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!--site:Google Fonts, tipografia: Montserrat-->
@@ -19,6 +19,10 @@
   <!-- site: BootstrapCDN-->
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" />
+
+
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+
 
   <title>Personajes</title>
   <!-- site: BootstrapCDN-->
@@ -450,26 +454,33 @@
   <footer></footer>
   <script src="script.js"></script>
 
-  <footer class="footer">
-    <h4>Dragon Ball Fan blog 2023</h4>
-    <p>
-      Este sitio ha sido creado para la entrega final del trabajo de Codo a Codo.
-    </p>
+    <!--footer-->
+
+    <footer class="footer">
+      <h4>Dragon Ball Fan blog 2023</h4>
+      <p id="textosindex">
+        Este sitio ha sido creado para la entrega final del trabajo de Codo a Codo.
+      </p>
 
     <!--iconos del sitio: iconify -->
     <div class="icons">
       <!--facebook logo-->
-      <iconify-icon icon="logos:facebook"></iconify-icon>
-      <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      <a href="https://www.facebook.com" target="_blank">
+        <iconify-icon icon="logos:facebook"></iconify-icon>
+      </a>
       <!--twitter logo-->
-      <iconify-icon icon="skill-icons:twitter"></iconify-icon>
-      <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      <a href="https://twitter.com" target="_blank">
+        <iconify-icon icon="skill-icons:twitter"></iconify-icon>
+      </a>
       <!--Instagram logo-->
-      <iconify-icon icon="skill-icons:instagram"></iconify-icon>
-      <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      <a href="https://www.instagram.com" target="_blank">
+        <iconify-icon icon="skill-icons:instagram"></iconify-icon>
+      </a>
       <!--Linkedin logo-->
-      <iconify-icon icon="skill-icons:linkedin"></iconify-icon>
-      <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      <a href="https://www.linkedin.com" target="_blank">
+        <iconify-icon icon="skill-icons:linkedin"></iconify-icon>
+      </a>
+
     </div>
   </footer>
 
